--- a/readme
+++ b/readme
@@ -1,1 +1,7 @@
-Hello
+<h4 align="center">First Jenkins Project 🎉</h4>
+<p align="center">
+	<img  src="https://img.shields.io/badge/jenkins-running-running?logo=jenkins&logoColor=black&color=green" alt="Jenkins" />
+</p>
+
+## About
+This is the first project using **`jenkins`** as part of the LuizaCode training program.
